condenser: Avoid text overflow if toggle label is long.

--- a/web/styles/message_row.css
+++ b/web/styles/message_row.css
@@ -307,6 +307,9 @@
         border-radius: 4px;
         border: none;
         outline: none;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        overflow-wrap: normal;
         font-variant: all-small-caps;
 
         &:hover {
